Fix left alignment of homepage header text on mobile

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -311,6 +311,11 @@ div.homepage_search.dfe-header__search-wrap {
 
 .dfe-page-hero {
    color: #fff;
+   .hero-text-container{
+      @media (max-width: 640px) {
+        margin-left: 0px;
+      }
+    }
 }
 
 .dfe-grid-container {
